test/src/e2e_vm_tests/test_programs/should_fail/arith_overflow/u16_add_overflow/src/main.sw
script;

fn main() -> u16 {
    let a: u16 = u16::max();
    let b: u16 = 1;

    let result: u16 = a + b;
    result
}